Added PDF pages, PDF to images, and merged multiple images into one PDF
* Renamed element names and text;

* Added configurations to the project;

* Added the ability to choose whether to compress audio properties in the video compressor;

* Fixed a bug related to incorrect saving of logs.